--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,8 @@ dependencies {
 	implementation 'io.springfox:springfox-swagger2:2.9.2'
 	implementation group: 'commons-codec', name: 'commons-codec', version: '1.11'
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
-
-
+	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2'
+	//testImplementation 'com.h2database:h2:2.1.212'
 }
 
 tasks.named('test') {
