--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9095
 
-spring.datasource.url=jdbc:mysql://localhost:3306/world
+spring.datasource.url=jdbc:mysql://aav9curnv2ncsu.ci1ldg072ohx.us-east-1.rds.amazonaws.com:3306/ebdb
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=DBPassword
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
